# AutoContentCreator_Agent

./: README.md  pyproject.toml
src/auto_content_creator/: crew.py  main.py
src/auto_content_creator/config/: agents.yaml  tasks.yaml
src/auto_content_creator/data/: style_bank.json
src/auto_content_creator/tools/: __init__.py  user_preference_tool.py
