[project]
name = "auto_content_creator"
version = "0.1.0"
description = "auto-content-creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
auto_content_creator = "auto_content_creator.main:run"
run_crew = "auto_content_creator.main:run"
train = "auto_content_creator.main:train"
replay = "auto_content_creator.main:replay"
test = "auto_content_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
